--- a/CSS/TenDrum.css
+++ b/CSS/TenDrum.css
@@ -2199,7 +2199,7 @@ footer {
 
 #apple_effect {
   width: 100%;
-  min-height: 1250vh;
+  min-height: 1300vh;
 }
 
 #apple_effect .parallax_window {
@@ -2713,6 +2713,30 @@ footer {
           align-items: flex-start;
 }
 
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .About-03 {
+    padding: 40px;
+  }
+}
+
+@media (max-width: 1024px) {
+  #apple_effect .parallax_window .effect_box .About-03 {
+    padding: 30px;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .About-03 {
+    padding: 20px;
+  }
+}
+
+@media (max-width: 320px) {
+  #apple_effect .parallax_window .effect_box .About-03 {
+    padding: 10px;
+  }
+}
+
 #apple_effect .parallax_window .effect_box .About-03 .about-title-00 {
   margin-top: 15%;
   width: 50%;
@@ -2728,6 +2752,7 @@ footer {
     height: 40px;
     line-height: 40px;
     font-size: 36px;
+    margin-top: 0;
   }
 }
 
@@ -2748,9 +2773,35 @@ footer {
 }
 
 #apple_effect .parallax_window .effect_box .About-03 .about-text-00 {
-  width: 50%;
-  font-size: 24px;
+  width: 60%;
+  font-size: 30px;
   text-align: left;
+}
+
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .About-03 .about-text-00 {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 1024px) {
+  #apple_effect .parallax_window .effect_box .About-03 .about-text-00 {
+    font-size: 20px;
+    width: 65%;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .About-03 .about-text-00 {
+    font-size: 16px;
+    width: 80%;
+  }
+}
+
+@media (max-width: 320px) {
+  #apple_effect .parallax_window .effect_box .About-03 .about-text-00 {
+    font-size: 14px;
+  }
 }
 
 #apple_effect .parallax_window .effect_box .About-03 .about-text-00 .about-text-5-team {
@@ -2761,17 +2812,24 @@ footer {
       flex-wrap: wrap;
 }
 
-#apple_effect .parallax_window .effect_box .About-03 .about-text-00 .about-text-5-team .color-gray {
-  width: 7%;
+#apple_effect .parallax_window .effect_box .About-03 .about-text-00 .about-text-5-team .team05 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+#apple_effect .parallax_window .effect_box .About-03 .about-text-00 .about-text-5-team .team05 .color-gray {
+  width: 5%;
   height: 30px;
   line-height: 30px;
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
   color: #b5b5b6;
 }
 
-#apple_effect .parallax_window .effect_box .About-03 .about-text-00 .about-text-5-team .about-text-5-text {
-  width: 90%;
+#apple_effect .parallax_window .effect_box .About-03 .about-text-00 .about-text-5-team .team05 .about-text-5-text {
+  width: 95%;
   color: #231815;
   height: 30px;
   line-height: 30px;
@@ -2783,20 +2841,119 @@ footer {
   padding-left: 30%;
 }
 
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .About-06 {
+    padding-top: 10%;
+    padding-left: 15%;
+  }
+}
+
+@media (max-width: 1024px) {
+  #apple_effect .parallax_window .effect_box .About-06 {
+    padding-top: 10%;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .About-06 {
+    padding-top: 10%;
+  }
+}
+
+@media (max-width: 320px) {
+  #apple_effect .parallax_window .effect_box .About-06 {
+    padding-top: 10%;
+  }
+}
+
 #apple_effect .parallax_window .effect_box .About-06 .en-title {
-  width: 70%;
-  font-size: 150px;
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#apple_effect .parallax_window .effect_box .About-06 .en-title .en-name {
+  width: 50%;
   font-family: "Fredericka the Great", cursive;
+  font-size: 150px;
+}
+
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .About-06 .en-title .en-name {
+    font-size: 100px;
+  }
+}
+
+@media (max-width: 1024px) {
+  #apple_effect .parallax_window .effect_box .About-06 .en-title .en-name {
+    font-size: 80px;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .About-06 .en-title .en-name {
+    font-size: 60px;
+  }
+}
+
+@media (max-width: 320px) {
+  #apple_effect .parallax_window .effect_box .About-06 .en-title .en-name {
+    font-size: 48px;
+  }
 }
 
 #apple_effect .parallax_window .effect_box .About-06 .en-title .line-01 {
+  width: 30%;
+  border-bottom: 1px solid #b15821;
   color: #b15821;
-  font-size: 20px;
+}
+
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .About-06 .en-title .line-01 {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 1024px) {
+  #apple_effect .parallax_window .effect_box .About-06 .en-title .line-01 {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .About-06 .en-title .line-01 {
+    font-size: 14px;
+  }
 }
 
 #apple_effect .parallax_window .effect_box .About-06 .cn-title {
   width: 70%;
   font-size: 120px;
+}
+
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .About-06 .cn-title {
+    font-size: 80px;
+  }
+}
+
+@media (max-width: 1024px) {
+  #apple_effect .parallax_window .effect_box .About-06 .cn-title {
+    font-size: 60px;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .About-06 .cn-title {
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 320px) {
+  #apple_effect .parallax_window .effect_box .About-06 .cn-title {
+    font-size: 32px;
+  }
 }
 
 #apple_effect .parallax_window .effect_box .sec-07 {
@@ -2831,7 +2988,6 @@ footer {
 
 #apple_effect .parallax_window .effect_box .sec-07 .title-07 {
   width: 50%;
-  height: 10%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2842,29 +2998,86 @@ footer {
       align-content: center;
 }
 
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .title-07 {
+    width: 60%;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .title-07 {
+    width: 70%;
+  }
+}
+
+@media (max-width: 320px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .title-07 {
+    width: 80%;
+  }
+}
+
 #apple_effect .parallax_window .effect_box .sec-07 .title-07 .fas.fa-circle {
   color: #595757;
   font-size: 14px;
   line-height: 100px;
 }
 
-#apple_effect .parallax_window .effect_box .sec-07 .title-07 .sec-07-line {
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .title-07 .fas.fa-circle {
+    line-height: 80px;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .title-07 .fas.fa-circle {
+    line-height: 72px;
+  }
+}
+
+@media (max-width: 320px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .title-07 .fas.fa-circle {
+    line-height: 64px;
+  }
+}
+
+#apple_effect .parallax_window .effect_box .sec-07 .title-07 .sec-07-title {
   width: 50%;
   height: 50px;
   line-height: 50px;
   border-bottom: 1px solid #b15821;
-}
-
-#apple_effect .parallax_window .effect_box .sec-07 .title-07 .sec-07-line .sec-07-title {
-  width: 100%;
   font-size: 48px;
   text-align: center;
   color: #673a1b;
 }
 
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .title-07 .sec-07-title {
+    height: 40px;
+    line-height: 40px;
+    font-size: 36px;
+    margin-top: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .title-07 .sec-07-title {
+    font-size: 32px;
+    height: 36px;
+    line-height: 36px;
+  }
+}
+
+@media (max-width: 320px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .title-07 .sec-07-title {
+    font-size: 20px;
+    height: 32px;
+    line-height: 32px;
+  }
+}
+
 #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context {
   width: 60%;
-  height: 80%;
+  height: 85%;
   background-color: #0b6c6d;
   border-radius: 150px;
   color: #f7f8f8;
@@ -2873,11 +3086,48 @@ footer {
   position: relative;
 }
 
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context {
+    width: 70%;
+    border-radius: 150px;
+    padding: 40px;
+  }
+}
+
+@media (max-width: 1024px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context {
+    width: 80%;
+    border-radius: 120px;
+    padding: 30px;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context {
+    width: 90%;
+    border-radius: 90px;
+  }
+}
+
+@media (max-width: 320px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context {
+    border-radius: 60px;
+  }
+}
+
 #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context .img-group {
   padding: 30px;
   margin: auto;
-  height: 50%;
+  height: 30%;
   margin-bottom: 5%;
+  background-image: url("../img/十鼓樂團/3張合併_工作區域 1.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+#apple_effect .parallax_window .effect_box .sec-07 .sec-07-context h3 {
+  margin: 0;
 }
 
 #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context .sty-bol {
@@ -2886,6 +3136,30 @@ footer {
 
 #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context .sec-07-text {
   font-size: 30px;
+}
+
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context .sec-07-text {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 1024px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context .sec-07-text {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context .sec-07-text {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 320px) {
+  #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context .sec-07-text {
+    font-size: 14px;
+  }
 }
 
 #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context .sec-07-more {
@@ -2903,11 +3177,13 @@ footer {
 
 #apple_effect .parallax_window .effect_box .sec-07 .sec-07-context .sec-07-more:hover {
   cursor: pointer;
+  letter-spacing: 2px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 #apple_effect .parallax_window .effect_box .title-08 {
   width: 50%;
-  height: 10%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2918,24 +3194,80 @@ footer {
       align-content: center;
 }
 
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .title-08 {
+    width: 60%;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .title-08 {
+    width: 70%;
+  }
+}
+
+@media (max-width: 320px) {
+  #apple_effect .parallax_window .effect_box .title-08 {
+    width: 80%;
+  }
+}
+
 #apple_effect .parallax_window .effect_box .title-08 .fas.fa-circle {
   color: #595757;
   font-size: 14px;
   line-height: 100px;
 }
 
-#apple_effect .parallax_window .effect_box .title-08 .sec-08-line {
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .title-08 .fas.fa-circle {
+    line-height: 80px;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .title-08 .fas.fa-circle {
+    line-height: 72px;
+  }
+}
+
+@media (max-width: 320px) {
+  #apple_effect .parallax_window .effect_box .title-08 .fas.fa-circle {
+    line-height: 56px;
+  }
+}
+
+#apple_effect .parallax_window .effect_box .title-08 .sec-08-title {
   width: 50%;
   height: 50px;
   line-height: 50px;
   border-bottom: 1px solid #b15821;
-}
-
-#apple_effect .parallax_window .effect_box .title-08 .sec-08-line .sec-08-title {
-  width: 100%;
   font-size: 48px;
   text-align: center;
   color: #673a1b;
+}
+
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .title-08 .sec-08-title {
+    height: 40px;
+    line-height: 40px;
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .title-08 .sec-08-title {
+    font-size: 32px;
+    height: 36px;
+    line-height: 36px;
+  }
+}
+
+@media (max-width: 320px) {
+  #apple_effect .parallax_window .effect_box .title-08 .sec-08-title {
+    font-size: 20px;
+    height: 28px;
+    line-height: 28px;
+  }
 }
 
 #apple_effect .parallax_window .effect_box .sec-08-context {
@@ -2956,12 +3288,18 @@ footer {
 
 #apple_effect .parallax_window .effect_box .sec-08-context .img-group {
   margin: auto;
-  padding: 30px;
   width: 80%;
+  height: 50%;
+  background-image: url("../img/主頁背景/關於-極限體驗.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-#apple_effect .parallax_window .effect_box .sec-08-context .img-group .sec-08-img {
-  width: 90%;
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .sec-08-context .img-group {
+    width: 80%;
+  }
 }
 
 #apple_effect .parallax_window .effect_box .sec-08-context .sec-08-textbox {
@@ -2983,13 +3321,37 @@ footer {
   font-size: 30px;
 }
 
+@media (max-width: 1280px) {
+  #apple_effect .parallax_window .effect_box .sec-08-context .sec-08-textbox .sec-08-text {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 1024px) {
+  #apple_effect .parallax_window .effect_box .sec-08-context .sec-08-textbox .sec-08-text {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  #apple_effect .parallax_window .effect_box .sec-08-context .sec-08-textbox .sec-08-text {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 320px) {
+  #apple_effect .parallax_window .effect_box .sec-08-context .sec-08-textbox .sec-08-text {
+    font-size: 14px;
+  }
+}
+
 #apple_effect .parallax_window .effect_box .sec-08-context .sec-08-textbox .sec-08-more {
   width: 10%;
   color: #f7f8f8;
   text-align: center;
   position: absolute;
-  right: 50px;
-  bottom: 0;
+  right: 10px;
+  bottom: 10px;
   background-color: #0b6c6d;
   border-radius: 10px;
   font-family: "Fredericka the Great", cursive;
