--- a/CSS/TenDrum.css
+++ b/CSS/TenDrum.css
@@ -2,7 +2,7 @@
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: 'cwTeXFangSong','cwTeXKai', 'Noto Sans TC', '微軟正黑體', sans-serif;
+  font-family: "cwTeXFangSong", "cwTeXKai", "Noto Sans TC", "微軟正黑體", sans-serif;
 }
 
 a {
@@ -34,9 +34,9 @@ footer {
   bottom: 0;
   width: 100%;
   height: 30px;
-  background-color: #B15821;
+  background-color: #b15821;
   margin: auto;
-  color: #F7F8F8;
+  color: #f7f8f8;
   font-size: 16px;
   text-align: center;
   line-height: 30px;
@@ -61,12 +61,42 @@ footer {
           justify-content: space-between;
 }
 
+@media (max-width: 768px) {
+  .index .Nav {
+    justify-items: flex-end;
+  }
+}
+
 .index .Nav .Logo-pic {
   width: 45%;
 }
 
+@media (max-width: 768px) {
+  .index .Nav .Logo-pic {
+    width: 85%;
+    position: absolute;
+    top: 30%;
+    left: 20%;
+    -webkit-transform: translate(-30%, -20%);
+            transform: translate(-30%, -20%);
+  }
+}
+
 .index .Nav .left-group {
   width: 55%;
+}
+
+@media (max-width: 768px) {
+  .index .Nav .left-group {
+    position: absolute;
+    right: 1%;
+  }
+}
+
+@media (max-width: 320px) {
+  .index .Nav .left-group {
+    width: 100%;
+  }
 }
 
 .index .Nav .left-group .Menu-group {
@@ -83,6 +113,18 @@ footer {
   padding-bottom: 20px;
   text-transform: uppercase;
   text-rendering: optimizeLegibility;
+}
+
+@media (max-width: 768px) {
+  .index .Nav .left-group .Menu-group {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 320px) {
+  .index .Nav .left-group .Menu-group {
+    font-size: 14px;
+  }
 }
 
 .index .Nav .left-group .Menu-group .index-btn {
@@ -139,6 +181,12 @@ footer {
   border: 0;
 }
 
+@media (max-width: 768px) {
+  .index .Nav .left-group .Menu-group .btn {
+    border-radius: 30px;
+  }
+}
+
 .index .Nav .left-group .Menu-group .btn--stripe {
   overflow: hidden;
   position: relative;
@@ -181,18 +229,48 @@ footer {
 }
 
 .index .Nav .left-group .cloud-group .cloud {
-  width: 20%;
   position: absolute;
 }
 
 .index .Nav .left-group .cloud-group .cloud01 {
+  width: 20%;
   right: 60%;
   top: 150px;
 }
 
+@media (max-width: 768px) {
+  .index .Nav .left-group .cloud-group .cloud01 {
+    width: 30%;
+    right: 42%;
+    top: 165px;
+  }
+}
+
+.index .Nav .left-group .cloud-group .cloud03 {
+  display: none;
+  width: 50%;
+  right: 30%;
+  top: 200px;
+}
+
+@media (max-width: 768px) {
+  .index .Nav .left-group .cloud-group .cloud03 {
+    display: block;
+  }
+}
+
 .index .Nav .left-group .cloud-group .cloud02 {
+  width: 20%;
   right: 30%;
   top: 300px;
+}
+
+@media (max-width: 768px) {
+  .index .Nav .left-group .cloud-group .cloud02 {
+    width: 28%;
+    right: 25%;
+    top: 300px;
+  }
 }
 
 .index .big-img {
@@ -217,15 +295,25 @@ footer {
 .index .big-img .img-group {
   width: 100%;
   position: absolute;
-  bottom: 0px;
+  bottom: 0;
   left: 0px;
   overflow: hidden;
   white-space: nowrap;
   -webkit-animation: bannermove 15s linear infinite;
           animation: bannermove 15s linear infinite;
+  z-index: 10;
 }
 
-.index .big-img .img-group .img-group img {
+.index .big-img .img-group .img-dog {
+  width: 10%;
+  font-size: 70px;
+  background-image: url("../img/插圖/狗狗兒.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.index .big-img .img-group .img-group .img-dog {
   margin: 0 0.5em;
 }
 
