--- a/CSS/_index.scss
+++ b/CSS/_index.scss
@@ -8,23 +8,40 @@
     $btn-background-hover: $color-gray;
     $border-color: $color-gray;
     $border-color-hover: $color-black;
+    // 切板完成
     .index {
         .Nav {
             width: 100%;
             display: flex;
             justify-content: space-between;
+            @media (max-width: 768px) {
+                justify-items: flex-end;
+            }
 
             .Logo-pic {
                 width: 45%;
+                @media (max-width: 768px) {
+                    width: 85%;
+                    position: absolute;
+                    top: 30%;
+                    left: 20%;
+                    transform: translate(-30%, -20%);
+                }
             }
             .left-group {
                 width: 55%;
-
+                @media (max-width: 768px) {
+                    position: absolute;
+                    right: 1%;
+                }
+                @media (max-width: 320px) {
+                    width: 100%;
+                }
                 .Menu-group {
                     width: 100%;
                     margin-right: 30px;
                     text-align: center;
-                    font-size: 20px;
+                    font-size: $fon20;
                     font-weight: 540;
                     display: flex;
                     justify-items: flex-end;
@@ -33,6 +50,12 @@
 
                     text-transform: uppercase;
                     text-rendering: optimizeLegibility;
+                    @media (max-width: 768px) {
+                        font-size: $fon18;
+                    }
+                    @media (max-width: 320px) {
+                        font-size: $fon14;
+                    }
                     .index-btn {
                         width: 100%;
                         &:hover {
@@ -62,7 +85,7 @@
                             padding: 0;
                             border: 0;
                         }
-                        
+
                         display: block;
                         text-decoration: none;
                         text-transform: uppercase;
@@ -74,7 +97,9 @@
                         border: 2px solid $border-color;
                         border-radius: 10px;
                         transition: all 0.5s ease;
-
+                        @media (max-width: 768px) {
+                            border-radius: 30px;
+                        }
                         &--stripe {
                             overflow: hidden;
                             position: relative;
@@ -126,16 +151,37 @@
                     display: flex;
 
                     .cloud {
-                        width: 20%;
                         position: absolute;
                     }
                     .cloud01 {
+                        width: 20%;
+
                         right: 60%;
                         top: 150px;
+                        @media (max-width: 768px) {
+                            width: 30%;
+                            right: 42%;
+                            top: 165px;
+                        }
+                    }
+                    .cloud03 {
+                        display: none;
+                        width: 50%;
+                        right: 30%;
+                        top: 200px;
+                        @media (max-width: 768px) {
+                            display: block;
+                        }
                     }
                     .cloud02 {
+                        width: 20%;
                         right: 30%;
                         top: 300px;
+                        @media (max-width: 768px) {
+                            width: 28%;
+                            right: 25%;
+                            top: 300px;
+                        }
                     }
                 }
             }
@@ -157,12 +203,21 @@
             .img-group {
                 width: 100%;
                 position: absolute;
-                bottom: 0px;
+                bottom: 0;
                 left: 0px;
                 overflow: hidden;
                 white-space: nowrap;
                 animation: bannermove 15s linear infinite;
-                .img-group img {
+                z-index: 10;
+                .img-dog {
+                    width: 10%;
+                    font-size: 70px;
+                    background-image: url("../img/插圖/狗狗兒.png");
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: contain;                   
+                }
+                .img-group .img-dog {
                     margin: 0 0.5em;
                 }
             }
