--- a/CSS/_News.scss
+++ b/CSS/_News.scss
@@ -4,7 +4,8 @@
         height: 100vh;
         display: flex;
         background-image: url("../img/主頁背景/news-降_工作區域\ 1.jpg");
-        // background-color: #efe5cb;
+
+        // 左邊清單 切板完成
         .new-title {
             margin-top: 5%;
             margin-left: 10px;
@@ -15,15 +16,40 @@
                 font-weight: bold;
                 margin-bottom: 60px;
                 color: #673a1b;
+                @media (max-width: 1280px) {
+                    font-size: $fon48;
+                }
+                @media (max-width: 1024px) {
+                    font-size: $fon46;
+                }
+                @media (max-width: 768px) {
+                    font-size: $fon42;
+                    margin-bottom: 30px;
+                }
+                @media (max-width: 320px) {
+                    font-size: $fon24;
+                }
             }
             .new-title01 {
                 margin-top: 10%;
                 padding-left: 10px;
-                font-size: 26px;
+                font-size: $fon36;
                 color: #b15821;
                 border-bottom: 1px solid #b15821;
                 &:hover {
                     cursor: pointer;
+                }
+                @media (max-width: 1280px) {
+                    font-size: $fon32;
+                }
+                @media (max-width: 1024px) {
+                    font-size: $fon30;
+                }
+                @media (max-width: 768px) {
+                    font-size: $fon24;
+                }
+                @media (max-width: 320px) {
+                    font-size: $fon20;
                 }
             }
             .act {
@@ -31,9 +57,11 @@
                 color: #231815;
             }
         }
+        // 左邊清單
+        // 消息內容
         .new-contexts {
             width: 80%;
-            height: calc(100vh - 30px);
+            height: 100vh;
             margin-top: 5%;
             .new-context {
                 display: none;
@@ -51,13 +79,28 @@
                     .new-context-title {
                         width: 50%;
                         margin-bottom: 5%;
-                        font-size: 36px;
+                        font-size: $fon36;
                         font-weight: bold;
                         color: #3e3a39;
                         text-align: center;
                         border-bottom: 1px solid #727171;
 
                         height: 50px;
+                        @media (max-width: 1280px) {
+                            font-size: $fon32;
+                        }
+
+                        @media (max-width: 1024px) {
+                            font-size: $fon30;
+                        }
+
+                        @media (max-width: 768px) {
+                            font-size: $fon24;
+                        }
+
+                        @media (max-width: 320px) {
+                            font-size: $fon20;
+                        }
                     }
                     .new-context-group {
                         width: 100%;
@@ -65,7 +108,7 @@
                         display: flex;
                         flex-wrap: wrap;
                         justify-content: center;
-                        .col-sm-12,
+                        .col-md-12,
                         .col-lg-4 {
                             padding-left: 0;
                             padding-right: 0;
@@ -80,14 +123,20 @@
                             flex-wrap: wrap;
                             justify-content: center;
                             .new-imgs {
+                                width: 25%;
+                                height: 300px;
                                 display: flex;
                                 justify-content: center;
-                                .new-img {
-                                    width: 90%;
-                                    margin-bottom: 10px;
-                                    height: 70%;
-                                }
+                                background-position: center;
+                                background-repeat: no-repeat;
+                                background-size: contain;
                             }
+                            .new-img-01{}
+                            .new-img-02{}
+                            .new-img-03{}
+                            .new-img-04{}
+                            .new-img-05{}
+                            .new-img-06{}
 
                             .new-time {
                                 width: 100%;
@@ -132,6 +181,7 @@
                 display: block;
             }
         }
+        // 消息內容
     }
     footer {
         position: absolute;
