入園資訊更新

--- a/CSS/_Information.scss
+++ b/CSS/_Information.scss
@@ -63,7 +63,7 @@
     .park_photobox {
         height: 100%;
         width: 100%;
-        background-color: rgb(140, 40, 233);
+        // background-color: rgb(140, 40, 233);
 
     }
 
@@ -77,7 +77,7 @@
     .park_inf_photo {
         height: 100%;
         width: 100%;
-        /* background-color: darksalmon; */
+        background-color: darksalmon; 
         display: flex;
         justify-content: center;
         align-items: center;
