--- a/CSS/E-Information.css
+++ b/CSS/E-Information.css
@@ -1,25 +1,37 @@
 @charset "UTF-8";
+body {
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 .park_pag {
+  height: 100vh;
+  /* height: calc(100vh - 30px); */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  background-image: url("../img/入園資訊/背景news.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .park_button_bar {
-  height: calc(100vh - 30px);
+  height: calc(100vh - 47px);
   width: 20%;
-  background-color: antiquewhite;
+  /* background-color: antiquewhite; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 .park_photo_R {
-  height: calc(100vh - 30px);
+  height: calc(100vh - 47px);
   width: 80%;
-  background-color: #e95f28;
+  /* background-color: rgb(233, 95, 40); */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -31,7 +43,7 @@
 .park_button_g {
   height: 50%;
   width: 50%;
-  background-color: #2835e9;
+  /* background-color: rgb(40, 53, 233); */
   margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -44,7 +56,7 @@
 .park_tittle {
   height: 20%;
   width: 100%;
-  background-color: #4fe928;
+  /* background-color: rgb(79, 233, 40); */
   font-size: 36px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -60,7 +72,7 @@
 .park_lease_box {
   height: 20%;
   width: 100%;
-  background-color: #e9289f;
+  /* background-color: rgb(233, 40, 159); */
   font-size: 32px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -71,12 +83,35 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  cursor: pointer;
+}
+
+.park_lease_box:hover {
+  /* background-color: royalblue; */
+  color: royalblue;
 }
 
 .park_show {
   height: 20%;
   width: 100%;
-  background-color: #e9289f;
+  /* background-color: rgb(233, 40, 159); */
+  font-size: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: black;
+}
+
+.park_tour {
+  height: 20%;
+  width: 100%;
+  /* background-color: rgb(233, 40, 159); */
   font-size: 32px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -91,15 +126,15 @@
 }
 
 .park_photobox {
-  height: 100%;
+  height: 80%;
   width: 100%;
-  background-color: #8c28e9;
+  /* background-color: rgb(140, 40, 233); */
 }
 
 .park_inf {
   height: 100%;
   width: 100%;
-  background-color: cornflowerblue;
+  /* background-color: cornflowerblue; */
   display: none;
 }
 
@@ -118,24 +153,13 @@
           align-items: center;
 }
 
-footer {
-  width: 100%;
-  height: 30px;
-  background-color: #b15821;
-  margin: auto;
-  color: #f7f8f8;
-  font-size: 16px;
-  text-align: center;
-  line-height: 30px;
-}
-
 /* --------開關顯示---- */
 .park_active {
   display: block;
 }
 
 .park_lease_box.park_active {
-  background-color: #d61e1e;
+  background-color: #95da3a;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -145,5 +169,9 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.style_img {
+  width: 80%;
 }
 /*# sourceMappingURL=E-Information.css.map */
