--- a/CSS/E-Information.scss
+++ b/CSS/E-Information.scss
@@ -9,22 +9,36 @@ $fon20: 20px;
 $fon18: 18px;
 $fon16: 16px;
 $fon14: 14px;
+body {
+    margin: 0;
+    box-sizing: border-box;
+}
+
 .park_pag {
+    height: 100vh;
+    /* height: calc(100vh - 30px); */
     display: flex;
     flex-wrap: wrap;
+    background-image: url('../img/入園資訊/背景news.jpg');
+    // background-image: url('../img/入園資訊/入園資訊\ 背景_工作區域\ 1.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .park_button_bar {
-    height: calc(100vh - 30px);
+    height: calc(100vh - 47px);
     width: 20%;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     display: flex;
+
+
 }
 
 .park_photo_R {
-    height: calc(100vh - 30px);
+    height: calc(100vh - 47px);
     width: 80%;
-    background-color: rgb(233, 95, 40);
+    /* background-color: rgb(233, 95, 40); */
     display: flex;
     align-items: center;
 }
@@ -32,37 +46,59 @@ $fon14: 14px;
 .park_button_g {
     height: 50%;
     width: 50%;
-    background-color: rgb(40, 53, 233);
+    /* background-color: rgb(40, 53, 233); */
     margin: auto;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
+
+
+
+
 }
 
 .park_tittle {
     height: 20%;
     width: 100%;
-    background-color: rgb(79, 233, 40);
+    /* background-color: rgb(79, 233, 40); */
     font-size: 36px;
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 .park_lease_box {
     height: 20%;
     width: 100%;
-    background-color: rgb(233, 40, 159);
+    /* background-color: rgb(233, 40, 159); */
     font-size: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
+.park_lease_box:hover{
+    /* background-color: royalblue; */
+    color: royalblue;
+}
+
 
 .park_show {
     height: 20%;
     width: 100%;
-    background-color: rgb(233, 40, 159);
+    /* background-color: rgb(233, 40, 159); */
+    font-size: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+}
+
+.park_tour {
+    height: 20%;
+    width: 100%;
+    /* background-color: rgb(233, 40, 159); */
     font-size: 32px;
     display: flex;
     align-items: center;
@@ -71,15 +107,16 @@ $fon14: 14px;
 }
 
 .park_photobox {
-    height: 100%;
+    height: 80%;
     width: 100%;
-    background-color: rgb(140, 40, 233);
+    /* background-color: rgb(140, 40, 233); */
+
 }
 
 .park_inf {
     height: 100%;
     width: 100%;
-    background-color: cornflowerblue;
+    /* background-color: cornflowerblue; */
     display: none;
 }
 
@@ -92,16 +129,19 @@ $fon14: 14px;
     align-items: center;
 }
 
-footer {
-    width: 100%;
-    height: 30px;
-    background-color: #b15821;
-    margin: auto;
-    color: #f7f8f8;
-    font-size: 16px;
-    text-align: center;
-    line-height: 30px;
-}
+
+// footer {
+//     width: 100%;
+//     height: 30px;
+//     background-color: #B15821;
+//     opacity: 0.19;
+//     margin: auto;
+//     color: #F7F8F8;
+//     font-size: 16px;
+//     text-align: center;
+//     line-height: 30px;
+// }
+
 
 /* --------開關顯示---- */
 
@@ -110,8 +150,14 @@ footer {
 }
 
 .park_lease_box.park_active {
-    background-color: rgb(214, 30, 30);
+    background-color: rgb(149, 218, 58);
     display: flex;
     align-items: center;
     justify-content: center;
+
+}
+
+.style_img{
+    width: 80%;
+
 }
