--- a/CSS/TenDrum.css
+++ b/CSS/TenDrum.css
@@ -34,9 +34,9 @@ footer {
   bottom: 0;
   width: 100%;
   height: 30px;
-  background-color: #b15821;
+  background-color: rgba(177, 88, 33, 0.19);
   margin: auto;
-  color: #f7f8f8;
+  color: #40220F;
   font-size: 16px;
   text-align: center;
   line-height: 30px;
