--- a/CSS/TenDrum.scss
+++ b/CSS/TenDrum.scss
@@ -38,9 +38,10 @@ footer {
     bottom: 0;
     width: 100%;
     height: 30px;
-    background-color: #b15821;
+    background-color:rgba($color: #B15821, $alpha: 0.19);
+    // opacity: 0.19;
     margin: auto;
-    color: #f7f8f8;
+    color: #40220F;
     font-size: 16px;
     text-align: center;
     line-height: 30px;
